--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "clearcutapp",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@rails/ujs": "^6.1.2-1",
     "@rails/webpacker": "5.2.1",
+    "bootstrap": "^5.1.1",
+    "sass": "^1.40.1",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "gulp-sass": "^5.0.0",
+    "webpack-dev-server": "^4.2.1"
   }
 }
